SubVersion: $Id$
	
Log:

- 16/10/2007, version 1.1.0: roms
	- adding NSpire support...
	- unified Product Number & Main Calc Id into Product Id and maintained compatibility

- 04/10/2007, version 1.0.9: roms
	- fixed ROM dumping on TI92+/V200: switching to HOME screen failed
	- ROM dumping thru SilverLink under Linux is sometimes failing
	- added pause between file sending and ready check (fix bug #1808645?)
	- replaced some raw key codes by #defined ones
	- fixed some keys defines to be compliant with the HandHeld User's Manual
		(the manual defines the 'Q' key and not the 'q' one)
	- skip existing app when sending a TiGroup file (apps can't be overwritten)

- 17/09/2007, version 1.0.8: roms
	- fixed full screen copy with Titanium
	- fixed displaying of full path with Titanium/USB
	- fixed sending of FLASH apps on TI73
	- fixed sending of FLASH apps on non-SE (bug introduced in rev. 3291)
	- fixed progress bar update for backup & tigroup receiving
	- don't break USB communication if ROM dumping has been canceled
	- some Titanium/USB transfer can fail: fixed.

- 17/06/2007, version 1.0.7: roms
	- fixed bug in ticalcs_dirlist_destroy: don't free TreeInfo when tree has no folder
	- replaced malloc/free by g_malloc/g_free
	- replaced TNode by GNode as provided by GLib
	- changed args for ticalcs_dirlist_ve_exist, otherwise this function is buggy 
		with TI8x varnames (like lists due to presence of the '\' character)
	- fixed bug in ticalcs_dirlist_ve_add when no folder exists yet
	- added permanent TI83+/TI84+/83/86 variables to dirlist (Window Settings and others)
	- updated to follow ticonv API changes
	- USB hand-helds: fixed size of attribute array (usually smaller than needed).

- 12/04/2007, version 1.0.6: roms
	- wrong battery status (debug)
	- no clock in TI83+ (SE); no clock in TI84+, too (not handled yet)
	- bug #1563667: impossible to flash TI-83+/SE

- 23/02/2007, version 1.0.5: roms
	- enabled i18n
	- fixed TiEmu bug #1675675 / TiLP bug #1676133
